tpm-crypto-service/deploy/cluster/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tpm-crypto
